--- a/jQuery/css/style.css
+++ b/jQuery/css/style.css
@@ -8,15 +8,15 @@
     height: 150px;
     margin: 0 auto;
     margin-top: 5%;
-    border: solid 1px #000;
     overflow: hidden;
     position: relative;
     display: flex;
-
+    justify-content: center;
+    border-bottom: solid 1px #000;
 }
 
 .wrapslid {
-    width: 30%;
+    width: 33%;
     position: relative;
 }
 
