--- a/jQuery/css/style.css
+++ b/jQuery/css/style.css
@@ -24,7 +24,13 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
-    border-bottom: solid 1px #000;
+    border: solid 20px;
+    border-right: solid 60px;
+    border-image: url(../img/tv.png);
+    border-image-slice:90 190 105 80 fill;
+    border-image-width:20px 60px 20px 20px;
+    border-image-outset:0px 0px 0px 0px;
+    border-image-repeat:stretch stretch;
 }
 
 .wrapslid {
@@ -116,4 +122,5 @@ body {
 #cash {
     color: yellow;
     text-align: center;
+    
 }
