--- a/jQuery/css/style.css
+++ b/jQuery/css/style.css
@@ -7,7 +7,7 @@
     src: url(../font/Simpsonfont.otf);
 }
 
-@media(min-width: 454px) {
+@media(min-width: 320px) {
     * {
         margin: 0;
         padding: 0;
@@ -23,7 +23,7 @@
     }
 
     .wrap {
-        width: 85%;
+        width: 55%;
         height: 150px;
         margin: 0 auto;
         margin-top: 5%;
@@ -57,13 +57,17 @@
     }
 
     .wrap_panel1 {
-        width: 20%;
+        width: 37%;
         height: 75px;
         margin: 0 auto;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+    }
+
+    .wrap_panel1 > p {
+        font-size: 1.5em;
+        width: 35%;
     }
     
     .wrap_panel2 {
@@ -78,10 +82,6 @@
     
     .wrap_panel2 > p:first-child {
         width: 35%;
-    }
-    
-    .wrap_panel2 > p:nth-child(2) {
-        width: 25%;
     }
     
     .wrap_panel2 > p:last-child {
@@ -126,6 +126,23 @@
         color: yellow;
         text-align: center;
         
+    }
+
+    .wrap_select {
+        height: 10vh;
+        text-align: center;
+    }
+
+    .text_rate:hover {
+        cursor: pointer;
+    }
+
+    .select_rate { 
+        display: none;
+    }
+
+    .select_rate:hover {
+        cursor: pointer;
     }
 }
 
