добавил в catalog VueJS
переписал классы на vue

--- a/catalog/css/style.css
+++ b/catalog/css/style.css
@@ -107,6 +107,10 @@ nav {
     box-sizing: border-box;
 }
 
+.active_cart {
+    visibility: visible;
+}
+
 .header__blockimg {
     width: 150px;
     margin: 0 auto;
